--- a/ERP.Common/ERP.Common.csproj
+++ b/ERP.Common/ERP.Common.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Concrete\PasswordAuthentication.cs" />
     <Compile Include="Entities\LoginUser.cs" />
     <Compile Include="Entities\RegisterUser.cs" />
+    <Compile Include="Exceptions\UserException.cs" />
     <Compile Include="Models\Consts.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Models\ERP_Test.Context.cs">
@@ -76,6 +77,7 @@
       <DependentUpon>ERP_Test.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators\PasswordsMustMatchAttribute.cs" />
     <Compile Include="Validators\PasswordValidator.cs" />
     <Compile Include="Validators\PhoneValidator.cs" />
   </ItemGroup>
