--- a/ERP/Web.config
+++ b/ERP/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="ERPContextConnection" connectionString="DataSource=(local)\SQLEXPRESS;Initial catalog=ERP_Test; Integrated Secuity=True" providerName="System.Data.SqlClient" />
+    <add name="ERPContextConnection" connectionString="Data Source=(local)\SQLEXPRESS;Initial catalog=ERP_Test; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" />
