--- a/ERP/Web.config
+++ b/ERP/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="EncryptionKey" value="encryptionkKey"/>
   </appSettings>
   <connectionStrings>
     <add name="ERPContextConnection" connectionString="Data Source=(local)\SQLEXPRESS;Initial catalog=ERP_Test; Integrated Security=True" providerName="System.Data.SqlClient" />
