--- a/ERP/Web.config
+++ b/ERP/Web.config
@@ -9,12 +9,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="EncryptionKey" value="encryptionkKey"/>
+    <add key="EncryptionKey" value="encryptionkKey" />
   </appSettings>
   <connectionStrings>
     <add name="ERPContextConnection" connectionString="Data Source=(local)\SQLEXPRESS;Initial catalog=ERP_Test; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/User/User/Login" timeout="2880" />
+    </authentication>
     <compilation debug="true" />
     <httpRuntime targetFramework="4.6" />
     <httpModules>
